added initial recordings api and client
