# pkg/http/api/api.go
@@ -138,7 +138,9 @@ func Init(e *echo.Echo) error {
 	ResourceBackends.Mount(v1, "/backends")
 	ResourceMeetings.Mount(v1, "/meetings")
 	ResourceCommands.Mount(v1, "/commands")
+	ResourceRecordingsVisibility.Mount(v1, "/recordings-visibility")
 	ResourceRecordingsImport.Mount(v1, "/recordings-import")
+	ResourceRecordings.Mount(v1, "/recordings")
 	ResourceAgentRPC.Mount(v1, "/agent/rpc")
 	ResourceAgentBackend.Mount(v1, "/agent/backend")
 	ResourceAgentHeartbeat.Mount(v1, "/agent/heartbeat")
